# cs470-engine

./: CHANGELOG.md  pyproject.toml
cs470_engine/: __init__.py  concept.py  link_analysis.py  messages.py  ordering.py  persistence.py  plot_style.py  problems.py  random_graphs.py  record.py  scoring.py  submit.py  widgets.py  worksheet.py
cs470_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cs470_engine/data/: ek_copy_indegree_p50_seed7_n400000.json
tests/: render_regression.py  test_concept_layout.py  test_container_gate.py  test_dpi_invariance.py  test_edge_values.py  test_figure_dispatch.py  test_link_analysis.py  test_node_framing.py  test_random_graphs.py  test_schematic_geometry.py  test_sponsored_search.py  test_undirected_forwarding.py  test_xy_curve_log.py
tests/container_gate/: README.md  build_gate.py  gate.ipynb  run_gate.py
