[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cs470-engine"
version = "0.11.1"
description = "CS 470 interactive worksheet engine"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets",
    "markdown",
    "matplotlib",
    "networkx",
    # numpy: the seeded Erdős–Rényi sampler (random_graphs.sample_gnp, v0.11.0)
    # draws from an explicit PCG64 bit generator for cross-version-stable,
    # byte-reproducible G(n,p) samples. Already present in the deployed workspace
    # image via the base conda env (numpy 2.4.4) — declaring it here makes the
    # dependency honest, adds no new package to the image, and no kernel (GATE 1).
    "numpy",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cs470_engine*"]

# C3 Figure B's frozen E&K-copy in-degree count-table (Lesson 9). It ships in the
# wheel/image so the figure reads committed data — no live sampler at render time
# (L9 decision Q2). Byte-reproducible: regenerable from
# random_graphs.ek_copy_indegree_counts(**C3_FROZEN_SAMPLE["params"]).
[tool.setuptools.package-data]
cs470_engine = ["data/*.json"]
